[package]
name = "shadower"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple CLI utility to add rounded borders, padding, and shadows to images."
repository = "https://github.com/n3oney/shadower"
readme = "README.md"

[dependencies]
anyhow = "1.0.69"
skia-safe = "0.58.0"
clap = { version = "4.1.8", features = [ "derive" ] }
toml = "0.7.2"
serde = { version = "1.0.154", features = ["derive"]}
dirs = "4.0.0"
envmnt = "0.10.4"
